[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/screens/Join.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/UnderlineNinePatchRect.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/SceneTransition.tscn" type="PackedScene" id=5]

[node name="Join Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 3 )]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 440.0
margin_top = 313.0
margin_right = 840.0
margin_bottom = 407.0
rect_min_size = Vector2( 400, 0 )

[node name="NameHSplit" type="HSplitContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 400.0
margin_bottom = 25.0
dragger_visibility = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/NameHSplit"]
margin_right = 66.0
margin_bottom = 24.0
text = "Name:"

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/NameHSplit"]
margin_left = 78.0
margin_right = 400.0
margin_bottom = 25.0
rect_min_size = Vector2( 300, 0 )
max_length = 20

[node name="UnderlineNinePatchRect" parent="CenterContainer/VBoxContainer/NameHSplit/LineEdit" instance=ExtResource( 4 )]

[node name="LobbyHSplit" type="HSplitContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 29.0
margin_right = 400.0
margin_bottom = 54.0
dragger_visibility = 1

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/LobbyHSplit"]
margin_right = 77.0
margin_bottom = 24.0
text = "Lobby:"

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/LobbyHSplit"]
margin_left = 89.0
margin_right = 400.0
margin_bottom = 25.0

[node name="UnderlineNinePatchRect" parent="CenterContainer/VBoxContainer/LobbyHSplit/LineEdit" instance=ExtResource( 4 )]

[node name="ButtonMargin" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 58.0
margin_right = 400.0
margin_bottom = 94.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="ButtonHSplit" type="HSplitContainer" parent="CenterContainer/VBoxContainer/ButtonMargin"]
margin_left = 5.0
margin_top = 5.0
margin_right = 395.0
margin_bottom = 31.0
dragger_visibility = 1

[node name="CancelButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonMargin/ButtonHSplit"]
margin_right = 91.0
margin_bottom = 26.0
text = "Cancel"

[node name="JoinButton" type="Button" parent="CenterContainer/VBoxContainer/ButtonMargin/ButtonHSplit"]
margin_left = 103.0
margin_right = 390.0
margin_bottom = 26.0
text = "Join"

[node name="SceneTransitionTween" parent="." instance=ExtResource( 5 )]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonMargin/ButtonHSplit/CancelButton" to="." method="_on_CancelButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ButtonMargin/ButtonHSplit/JoinButton" to="." method="join_lobby"]
